--- a/Webpage/templates/GIITS.html
+++ b/Webpage/templates/GIITS.html
@@ -77,7 +77,7 @@
 
     <!-- Form container with input fields and submit button -->
     <div id="form-container">
-        <form action="#" method="post">
+        <form action="/create_repo" method="post">
             <label for="repoName">Repo Name:</label>
             <input type="text" id="repoName" name="repoName" required>
 
