--- a/src/templates/GIITS.html
+++ b/src/templates/GIITS.html
@@ -25,6 +25,7 @@
     #form-container-clone,
     #form-container-pull,
     #form-container-fork,
+    #form-container-check_branch,
     #form-container-delete {
       display: none;
     }
@@ -55,6 +56,7 @@
     <option value="delete_repo">Delete Repo</option>
     <option value="pull_repo">Pull Repo</option>
     <option value="fork_repo">Fork Repo</option>
+    <option value="check_branch">Check Branch</option>
   </select>
 
   <br>
@@ -102,6 +104,21 @@
     </form>
   </div>
 
+  <div id="form-container-check_branch">
+    <form action="/check_branch" method="post">
+      <label for="userName">User Name:</label>
+      <input type="text" id="userName" name="userName" required> <br> <br>
+
+      <label for="repoName">Repo Name:</label>
+      <input type="text" id="repoName" name="repoName" required> <br> <br>
+
+      <label for="branchName">Branch Name:</label>
+      <input type="text" id="branchName" name="branchName" required> <br> <br>
+
+      <input type="submit" value="Submit">
+    </form>
+  </div>
+
   <div id="form-container-pull">
     <form action="/pull_repo" method="post">
       <label for="repoOwner">Repo Owner:</label>
@@ -127,6 +144,7 @@
       document.getElementById('form-container-pull').style.display = 'none';
       document.getElementById('form-container-fork').style.display = 'none';
       document.getElementById('form-container-delete').style.display = 'none';
+      document.getElementById('form-container-check_branch').style.display = 'none';
 
       if (selectElement.value === 'create_repo') {
         document.getElementById('form-container-create').style.display = 'block';
@@ -138,6 +156,8 @@
         document.getElementById('form-container-pull').style.display = 'block';
       } else if (selectElement.value === 'fork_repo') {
         document.getElementById('form-container-fork').style.display = 'block';
+      } else if (selectElement.value === 'check_branch') {
+        document.getElementById('form-container-check_branch').style.display = 'block';
       }
     }
   </script>
