--- a/src/templates/GIITS.html
+++ b/src/templates/GIITS.html
@@ -27,6 +27,7 @@
     #form-container-fork,
     #form-container-check_branch,
     #form-container-branch,
+    #form-container-commit_count,
     #form-container-delete {
       display: none;
     }
@@ -59,6 +60,7 @@
     <option value="fork_repo">Fork Repo</option>
     <option value="check_branch">Check Branch</option>
     <option value="get_branch">Get Branches</option>
+    <option value="commit_count">Get Commit Count</option>
   </select>
 
   <br>
@@ -66,6 +68,27 @@
     <form action="/create_repo" method="post">
       <label for="repoName">Repo Name:</label>
       <input type="text" id="repoName" name="repoName" required> <br> <br>
+      <input type="submit" value="Submit">
+    </form>
+  </div>
+
+  <div id="form-container-clone">
+    <form action="/clone_repo" method="post">
+      <label for="repoURL">Repository URL:</label>
+      <input type="text" id="repoURL" name="repoURL" required><br> <br>
+
+      <label for="destinationPath">Destination Path:</label>
+      <input type="text" id="destinationPath" name="destinationPath" required><br> <br>
+
+      <input type="submit" value="Submit">
+    </form>
+  </div>
+
+   <div id="form-container-commit_count">
+    <form action="/commit_count" method="post">
+      <label for="repoURL">Repository URL:</label>
+      <input type="text" id="repoURL" name="repoURL" required><br> <br>
+
       <input type="submit" value="Submit">
     </form>
   </div>
@@ -160,6 +183,7 @@
       document.getElementById('form-container-delete').style.display = 'none';
       document.getElementById('form-container-check_branch').style.display = 'none';
       document.getElementById('form-container-branch').style.display = 'none';
+      document.getElementById('form-container-commit_count').style.display = 'none';
 
       if (selectElement.value === 'create_repo') {
         document.getElementById('form-container-create').style.display = 'block';
@@ -175,6 +199,8 @@
         document.getElementById('form-container-check_branch').style.display = 'block';
       } else if (selectElement.value === 'get_branch') {
         document.getElementById('form-container-branch').style.display = 'block';
+      } else if (selectElement.value === 'commit_count') {
+        document.getElementById('form-container-commit_count').style.display = 'block';
       }
     }
   </script>
