--- a/src/templates/GIITS.html
+++ b/src/templates/GIITS.html
@@ -122,8 +122,8 @@
 
   <div id="form-container-get_branches">
     <form action="/get_branches" method="post">
-      <label for="userName">User Name:</label>
-      <input type="text" id="userName" name="userName" required> <br> <br>
+      <label for="repoOwner">Repo Owner:</label>
+      <input type="text" id="repoOwner" name="repoOwner" required> <br> <br>
 
       <label for="repoName">Repo Name:</label>
       <input type="text" id="repoName" name="repoName" required> <br> <br>
