--- a/src/templates/GIITS.html
+++ b/src/templates/GIITS.html
@@ -29,7 +29,7 @@
     #form-container-branch,
     #form-container-commit_count,
     #form-container-merge_branch,
-    #form-container-commit_diff
+    #form-container-commit_diff,
     #form-container-delete, {
       display: none;
     }
