--- a/src/templates/GIITS.html
+++ b/src/templates/GIITS.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>GIITS Homepage</title>
+  <title>GITS Homepage</title>
 
   <style>
     body {
@@ -41,7 +41,7 @@
 
 <body>
 
-  <h1>GIITS Homepage</h1>
+  <h1>GITS Homepage</h1>
 
   <!-- Image container -->
 
@@ -69,11 +69,12 @@
 
   </select>
 
-  <br>
+  <br> <br>
   <div id="form-container-create">
     <form action="/create_repo" method="post">
       <label for="repoName">Repo Name:</label>
       <input type="text" id="repoName" name="repoName" required> <br> <br>
+
       <input type="submit" value="Submit">
     </form>
   </div>
