--- a/src/templates/GIITS.html
+++ b/src/templates/GIITS.html
@@ -226,15 +226,19 @@ this file. If not, please write to: gits3.1project@gmail.com
   </div>
 
   <div id="form-container-commit_diff">
-    <form action="/commit_diff" method="post">
-      <label for="repoOwner">Repo Owner:</label>
-      <input type="text" id="repoOwner" name="repoOwner" required> <br> <br>
 
-      <label for="repoName">Repo Name:</label>
-      <input type="text" id="repoName" name="repoName" required> <br> <br>
+    <form action="/commit" method="post">
+      <label for="localPath">Working Directory:</label>
+      <input type="text" id="localPath" name="localPath" required> <br> <br>
 
       <label for="branchName">Branch Name:</label>
       <input type="text" id="branchName" name="branchName" required> <br> <br>
+
+      <label for="filename">Filenames:</label>
+      <input type="text" id="filename" name="filename" required> <br> <br>
+
+      <label for="commit_msg">Commit Message:</label>
+      <input type="text" id="commit_msg" name="commit_msg" required> <br> <br>
 
       <input type="submit" value="Submit">
     </form>
