fixed git commit

--- a/src/templates/GIITS.html
+++ b/src/templates/GIITS.html
@@ -227,7 +227,7 @@ this file. If not, please write to: gits3.1project@gmail.com
 
   <div id="form-container-commit_diff">
 
-    <form action="/commit" method="post">
+    <form action="/commit_diff" method="post">
       <label for="localPath">Working Directory:</label>
       <input type="text" id="localPath" name="localPath" required> <br> <br>
 
