--- a/src/templates/GIITS.html
+++ b/src/templates/GIITS.html
@@ -42,6 +42,7 @@ this file. If not, please write to: gits3.1project@gmail.com
     #form-container-get_branches,
     #form-container-create_branch,
     #form-container-diff,
+    #form-container-push,
     #form-container-delete {
       display: none;
     }
@@ -79,6 +80,7 @@ this file. If not, please write to: gits3.1project@gmail.com
     <option value="commit_diff">Commit diff</option>
     <option value="create_branch">Create Branch</option>
     <option value="diff">View Diff</option>
+    <option value="push">Push Diff</option>
 
   </select>
 
@@ -260,6 +262,30 @@ this file. If not, please write to: gits3.1project@gmail.com
     </form>
   </div>
 
+  <div id="form-container-push">
+    <form action="/push" method="post">
+      <label for="userName">User Name:</label>
+      <input type="text" id="userName" name="userName" required> <br> <br>
+
+      <label for="localPath">Working Directory:</label>
+      <input type="text" id="localPath" name="localPath" required> <br> <br>
+
+      <label for="repoName">Repo Name:</label>
+      <input type="text" id="repoName" name="repoName" required> <br> <br>
+
+      <label for="branchName">Branch Name:</label>
+      <input type="text" id="branchName" name="branchName" required> <br> <br>
+
+      <label for="filename">Filenames:</label>
+      <input type="text" id="filename" name="filename" required> <br> <br>
+
+      <label for="commit_msg">Commit Message:</label>
+      <input type="text" id="commit_msg" name="commit_msg" required> <br> <br>
+
+      <input type="submit" value="Submit">
+    </form>
+  </div>
+
   <script>
     function toggleForm(selectElement) {
       document.getElementById('form-container-create').style.display = 'none';
@@ -275,6 +301,7 @@ this file. If not, please write to: gits3.1project@gmail.com
       document.getElementById('form-container-commit_diff').style.display = 'none';
       document.getElementById('form-container-create_branch').style.display = 'none';
       document.getElementById('form-container-diff').style.display = 'none';
+      document.getElementById('form-container-push').style.display = 'none';
 
       if (selectElement.value === 'create_repo') {
         document.getElementById('form-container-create').style.display = 'block';
@@ -300,6 +327,8 @@ this file. If not, please write to: gits3.1project@gmail.com
         document.getElementById('form-container-create_branch').style.display = 'block';
       } else if (selectElement.value === 'diff') {
         document.getElementById('form-container-diff').style.display = 'block';
+      } else if (selectElement.value === 'push') {
+        document.getElementById('form-container-push').style.display = 'block';
       }
     }
   </script>
