Update GIITS.html display tags

--- a/src/templates/GIITS.html
+++ b/src/templates/GIITS.html
@@ -139,7 +139,7 @@ this file. If not, please write to: gits3.1project@gmail.com
 
   <div id="form-container-fork">
     <form action="/fork_repo" method="post">
-      <label for="userName">User Name:</label>
+      <label for="userName">Repo Owner:</label>
       <input type="text" id="userName" name="userName" required> <br> <br>
 
       <label for="repoName">Repo Name:</label>
@@ -151,7 +151,7 @@ this file. If not, please write to: gits3.1project@gmail.com
 
   <div id="form-container-check_branch">
     <form action="/check_branch" method="post">
-      <label for="userName">User Name:</label>
+      <label for="userName">Repo Owner:</label>
       <input type="text" id="userName" name="userName" required> <br> <br>
 
       <label for="repoName">Repo Name:</label>
@@ -184,7 +184,7 @@ this file. If not, please write to: gits3.1project@gmail.com
 
   <div id="form-container-merge_branch">
     <form action="/merge_branch" method="post">
-      <label for="repoOwner">Repo Owner:</label>
+      <label for="repoOwner">User Name:</label>
       <input type="text" id="repoOwner" name="repoOwner" required> <br> <br>
 
       <label for="repoName">Repo Name:</label>
@@ -217,7 +217,7 @@ this file. If not, please write to: gits3.1project@gmail.com
 
   <div id="form-container-diff">
     <form action="/diff" method="post">
-      <label for="repoOwner">Repo Owner:</label>
+      <label for="repoOwner">User Name:</label>
       <input type="text" id="repoOwner" name="repoOwner" required> <br> <br>
 
       <label for="repoName">Repo Name:</label>
